--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="bubbles" id="bubbles"></div>
   <div class="container">
-    <h1 class="birthday-name">❤️ Happy Birthday My love! 👸🏻❤️</h1>
+    <h1 class="birthday-name">♥ Happy Birthday My love! 👸🏻♥</h1>
     <div class="sparkles"></div>
     <button class="next-btn" onclick="goToNextPage('envelope.html')">Next →</button>
   </div>
