--- a/message.html
+++ b/message.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Message</title>
+  <title>Aniverssary</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page3">
@@ -27,18 +27,21 @@
   <div class="bubbles" id="bubbles"></div>
   <div class="containerr">
     <div class="message">
-      <h2>My Princess - Eunice ❤️💍</h2>
-      <p> Baby, I know i made this a day late ..but better late than never right?🤭♥
-        you are really growing up,you wanna surpass me eh🙄 ?
-        Since I met you,there's a lot you've impacted in my life,you bring peace,joy and the meaning of life
-        not just to me but to everyone around you .Our dating life has been a lot for you and probably draining
-        and its all on me but i give you my word that I will make it up to you and be that Ideal man you dream of.
-        I appreciate all the forgiveness ,all the tolerance that you've had to put up with for us to work..🥺💕
-        I know i've promised you a lot and i know you expect a lot from me,,i'm working on all kind of situations i'm in right now
-        because I wanna be a high value Man for you and a high value Dad for the kids we'll get in the coming years.
-        Its a scary tough journey for both of us,,you having to wait..me having to work smart not knowing if it'll work,but it just has to . we'll make everything work my love ♥😚.Dont let anything/one to give you negative thoughts about yourself and about us ,,i know you already don't so lets keep it that way Baby♥. I love you so much so so much and i want to show you that from today 1st of April 2025💞✨ for the rest of your life💖.  20 is a really exiting year to turn,there's a lot to be done and a lot to achive but i'll hold your hand and we'll walk this through❣ .You are getting prettier,smarter and stunning as days go by🥰❤♥, atleast sasa all our ages start with a two😂😍but hey i'm still older🤨. I Believe I have the prettiest,dead Gorgeous Girl in the World😭❤ You are so Beautiful my love ,the attention I have to deal with when we are together I cant Fathom the attention you deal with alone😔.I appreciate your Mother mostly for raising you right and Dad mostly for keeping you safe,I love those parents♥💫They'll get to know that soon💝.I love you so much and I'm wishing you an easier greener path in everything you put your mind on💓.#WIFEY
+      <h2>My Girl - Eunice ❤️💍</h2>
+      <p> Baby, I know this wont be exiting much but,I wanna do this genuinely for you❤
+        ....im pretty sure I would have made this already if you texted the paragraph...i would have gotten a lil excited about today and do this.I had zero motivation as I woke up..
+        I just wished you a normal one..because of how i felt..dissapointed in myself and all.It was at such a day that I first set my eyes on you in 2023🥺
+        ..I was really elated ammused and shoked at the same time..It was like I was staring at an Angel from Heaven..your pretty eyes..your lovely smile..your well done hair..beautiful skin
+        ..soft lips ..your cute voice..Everything was perfect that day🥰😍...and truthfully...I wanna remake that day each 29th Aril each year..unfortunately today was a bad timing..for both of us
+        ...this day is forever marked in my heart and i know you cherish it more.I understand what you expect and expecting from me..and I'm  sorry for dissapointing you yet again..
+        I wont make any more promises rather just suprise you as we go on...I appreciate the tolerance,the love and care you have for me..as I am right now.I wanna spend every second with you,
+        and it pains me to see you dissapointed by me,that is not the picture I wanna keep.I will change  for you and I know with time  things will be better and you will have all you ever need from me.I love you so so much
+        ...that I can't stand hurting you anymore...Im obsessed with you in all ways
+        ..And I want you all to my self For life.We are gonna make a good family and the best parents♥.I wanna appreciate you for always motivating me,believing in me and keeping me going.You are really the best thing that has ever happened to me💍❣.
+        May God see us through..and May He keep blessing flowing our way my love.#TOGETHER4LIFE
+    
       </p>
-      <p>Happy Birthday!</p>
+      <p>Happy Anniversary!</p>
     </div>
     <button class="start-btn" onclick="goToNextPage('index.html')">Start Over</button>
   </div>
