--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday!</title>
+  <title>Happy Anniversary!</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page1">
@@ -26,7 +26,7 @@
   </div>
   <div class="bubbles" id="bubbles"></div>
   <div class="container">
-    <h1 class="birthday-name">♥ Happy Birthday My love! 👸🏻♥</h1>
+    <h1 class="birthday-name">♥ Happy Aniverssary My love! 👸🏻♥</h1>
     <div class="sparkles"></div>
     <button class="next-btn" onclick="goToNextPage('envelope.html')">Next →</button>
   </div>
