--- a/envelope.html
+++ b/envelope.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Envelope</title>
+  <title>Aniverssary Envelope</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page2">
